Changes in Caudium 1.2.x since Caudium 1.2.2
--------------------------------------------
- Scopes compatibility is to On/Conditional. If there is problems about that
  (cf bugs #514651 & #512647) then change it to Off/Conditional. 
  Changes is due because there will more issues from users moving from
  Caudium 1.0 to 1.2 than Roxen 1.3 to Caudium 1.3...
- Fixed bug #515131 : gtext broke on weird URLs
- Corrected a bug in ftp protocol in pasv mode. Thanks to  Joe Radinger <cheese@nosuchhost.net
- Fixed bugs #514651 & #512647 : Scopes compatibility break RXML
- Fixed bug #514653 : Unitialized variables get backtraces when try to
  expr them (same code : <formoutput><set variable=GT expr="#GT# + #Z#">
  </formoutput> was give backtrace if either GT or Z was not previously
  initialized).
- File index.rxml is now recognized as index file.
- Fixed bug #515405: New error handler doesn't HTML encode (see 
  http://www.cert.org/advisories/CA-2000-02.html), error pages was able to
  send abitrary code to browser using non existant pages (like for example :
  http://www.foo.server/<script>alert("CSS");</script>).

Changes in Caudium 1.2 since Caudium 1.0
----------------------------------------
- Added MODULE_EXPERIMENTAL to XML-Compliant RXML parser since it has sometimes
  some unespected way of working...
- Fix for bug #411982: the <set variable...> tag was reporting debug 
  status to the client even though the debug flag wasn't up.
- Corrected incorrect status computation of servers usage. Was counting only
  one virtual server.
- "caudiumctl" script added. Very useful for people who know apache well.
- Fix for bug #479167: The argument cache garbage collector was buggy.
- Fix for bug #446340: <list-tags> <dice> gives internal server error.
- Fix for bug #498377: the environment variable didn't show the complete url
  with the query.
- Corrected backtrace when invoquing internal images that don't exist on
  caudium-images/ directory.